--- a/css/style.sass
+++ b/css/style.sass
@@ -659,4 +659,4 @@ details summary::-webkit-details-marker
         &:hover .product_description__button__img
             filter: brightness(3)
 
-    
+@import cart
