dodelal cart.html, pochinil footer, nastroil sass

--- a/css/_cart.sass
+++ b/css/_cart.sass
@@ -1,12 +1,13 @@
 .cart
     +centerPadding()
-    margin-top: 96px
+    margin: 96px 0 128px
     display: flex
     justify-content: space-between
 
     &__product__buttons
         display: flex
         justify-content: space-between
+        margin-top: 72px
 
         &__item
             width: 235px
@@ -66,6 +67,8 @@
                 border: 1px solid #EAEAEA
                 +flexCenter
                 margin-left: 24px
+                +font(18px, 22px)
+                color: #656565
 
         &__close_img
             margin-left: 35px
