--- a/css/style.sass
+++ b/css/style.sass
@@ -319,6 +319,7 @@ input[type=checkbox]
         +font(14px, 17px)
         font-weight: 400
         color: #FFFFFF
+        transition: .2s
 
         &:hover
             background-color: $buttonColor - #111
@@ -667,3 +668,5 @@ details summary::-webkit-details-marker
             filter: brightness(3)
 
 @import cart
+
+@import registration
