--- a/css/style.css
+++ b/css/style.css
@@ -486,6 +486,8 @@ input[type=checkbox] {
   line-height: 17px;
   font-weight: 400;
   color: #FFFFFF;
+  -webkit-transition: .2s;
+  transition: .2s;
 }
 
 .footer__subscribe__button:hover {
@@ -1316,5 +1318,109 @@ details summary::-webkit-details-marker {
 
 .cart__address__total__button:hover {
   background-color: #e05c6e;
+}
+
+.registration-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: 64px 0 96px;
+}
+
+.registration-form {
+  width: 360px;
+}
+
+.registration-form__heading {
+  font-family: Lato;
+  font-size: 16px;
+  line-height: 19px;
+  color: #222222;
+  font-weight: 300;
+}
+
+.registration-form__input {
+  width: 100%;
+  height: 45px;
+  margin-top: 21px;
+  padding: 0 17px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #B1B1B1;
+}
+
+.registration-form__radio {
+  margin: 32px 10px 32px 0;
+}
+
+.registration-form__radio_mg {
+  margin-left: 20px;
+}
+
+.registration-form__radio_font {
+  font-family: Lato;
+  font-size: 11px;
+  line-height: 13px;
+  color: #000000;
+  font-weight: 300;
+}
+
+.registration-form__password-text {
+  margin: 15px 0 39px;
+  font-family: Lato;
+  font-size: 13px;
+  line-height: 16px;
+  font-weight: 300;
+  color: #B1B1B1;
+}
+
+.registration-form__button {
+  width: 167px;
+  height: 50px;
+  background-color: #F16D7F;
+  border: none;
+  font-family: Lato;
+  font-size: 14px;
+  line-height: 17px;
+  font-weight: 400;
+  color: #FFFFFF;
+  padding-right: 20px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.registration-form__button:hover {
+  background-color: #e05c6e;
+}
+
+.button__add-img {
+  margin-left: -50px;
+}
+
+.registration-info {
+  max-width: 652px;
+  font-family: Lato;
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: 300;
+  color: #000000;
+}
+
+.registration-info__description {
+  margin: 22px 0;
+}
+
+.registration-info__perk {
+  margin-bottom: 16px;
+}
+
+.registration-info__perk::before {
+  content: url("../img/check-img.svg");
+  margin-right: 23px;
 }
 /*# sourceMappingURL=style.css.map */
